--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,9 @@
+[server]
+headless = true
+runOnSave = true
+enableXsrfProtection = true
+
+
 [theme]
 base = "light"
 primaryColor = "#1f77b4"
@@ -12,3 +18,6 @@ gatherUsageStats = false
 
 [client]
 showSidebarNavigation = false
+
+[ui]
+hideTopBar = true
